@@ -1,1 +1,1 @@
-<Inline DEF="DEFAULT_DEVICEINFO" url="../display/None/device/Any PHANToM device" />
+<Group />
