@@ -1,11 +1,11 @@
 [haptics device]
-device = Any PHANToM device
+device = None
 stylus = H3D Default.x3d
 
 [graphical]
 rendermode = MONO
-viewpoint = H3D Default
 mirrored = False
+viewpoint = H3D Default
 fullscreen = False
 
 [display]
